# CompPro-Make

./: .gitignore  .gitmodules  compile_flags.txt  d.sh  pyproject.toml  s.sh
.verify-helper/cache/803b57643627379d6f24d8c74ec74934/test/: 11.txt.in  12.txt.in  14.txt.in  15.txt.in
1/: main  main.cpp  main_expanded.cpp
template/: Makefile  main.cpp
