[tool.poetry]
name = "comppro"
version = "0.1.0"
description = ""
authors = ["KowerKoint <kowerkoint@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
online-judge-tools = "^11.5.1"
online-judge-verify-helper = "^5.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
